# voxel-mc-attempt

./: .gitignore  CMakeLists.txt  README.md  traverse_concat.py  vcpkg.json
resources/textures/scripts/: block_tiles.py  make_block_atlas.py
src/client/: CMakeLists.txt  MineClientApp.cpp
src/client/renderer/: Application.cpp  Application.h  BufferPool.h  ChunkMesh.cpp  ChunkMesh.h  InputSystem.cpp  InputSystem.h  MeshColumn.cpp  MeshColumn.h  Mesher.cpp  Mesher.h  Player.cpp  Player.h  Raycast.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAtlas.cpp  TextureAtlas.h  Vertex.h
src/client/renderer/shaders/: basic.frag  basic.vert  hud.vert  outline.frag  outline.vert
src/common/: CMakeLists.txt
src/common/core/: Camera.cpp  Camera.h  Frustum.h
src/common/world/: Block.h  Chunk.h  ChunkColumn.cpp  ChunkColumn.h  Direction.h  PerlinNoise.h  World.h  WorldConstants.h
src/server/: CMakeLists.txt  MineServerApp.cpp
